# saksa

./: .editorconfig  .env  .eslintignore  .eslintrc.js  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.rocksdb  Makefile  README.md  docker-compose.yml  index.html  main.py  package.json  producer.py  pyproject.toml  sio_client.py  vite.config.js
.github/workflows/: docker-image.yml  pr.yml
docker/connect/: Dockerfile  scylla-connector.json
frontend/: ChatInfoComponent.jsx  ChatListComponent.jsx  InfListComponent.jsx  MessageComponent.jsx  MessageInput.jsx  MessagesComponent.jsx  UserComponent.jsx  ctx.js  index.css  main.jsx  store.js
frontend/api/: auth.js  chatlist.js  messages.js
frontend/features/: auth.js  chatbox.js  chatlist.js
migrations/00001_create_messages_table/: up.cql
migrations/00002_chats_by_user/: down.cql  up.cql
migrations/00003_create_users_table/: down.cql  up.cql
migrations/00004_create_chat_members_table/: down.cql  up.cql
migrations/00005_create_chats_table/: up.cql
migrations/create_messages_table/: up.cql
nomad/: services.dev.hcl
saksa/: aio.py  aio_consumer.py  api.py  app.py  chatlist_service.py  index.html  kafka_worker.py  message_service.py  processors.py  response.py  scylladb.py  settings.py  sio.py  user_event_service.py  user_service.py
saksa/auth/: auth_service.py  enpoints.py
saksa/libs/: paginator.py  validator.py
saksa/libs/httpx_ext/: transport.py
saksa/libs/templates/: __init__.py  loaders.py
saksa/static/: index.js  main.css
templates/auth/: index.html
tests/: aio-guest-test.py  test.py
vendors/rocksdb-6.29.5/lib/x86_64-linux-gnu/: librocksdb.so.6
