[tool.poetry]
name = "saksa"
version = "0.2.0dev25"
description = ""
authors = ["mozartilize"]
license = "MIT"
packages = [
  { include = "saksa" },
]
include = ["saksa/static/**/*"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.17.3"
wsproto = "^1.0.0"
python-socketio = "^5.3.0"
orjson = "^3.5.3"
aioredis = {extras = ["hiredis"], version = "^2.0.0a1"}
confluent-kafka = "^1.7.0"
python-dotenv = "^0.18.0"
itsdangerous = "^2.0.1"
requests = "^2.27.1"
websocket-client = "^1.2.3"
starlette = "^0.20.0"
scylla-driver = "^3.25.4"
python-multipart = "^0.0.5"
Jinja2 = "^3.1.2"
anyio = "^3.6.1"
faust-streaming = {extras = ["rocksdb"], version = "^0.8.5"}
accept-types = "^0.4.1"
marshmallow = "^3.18.0"
httpx = "^0.23.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^22.6.0"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.285"
isort = "^5.11.4"
pyupgrade = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.pyright]
reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.8"
pythonPlatform = "Linux"
